# small-co-api

./: Makefile  pyproject.toml  readme.md  small-co-api.postman_collection.json
api/: app.py  health.py  utils.py
api/storage/: s3.py  storage.py
