[tool.poetry]
name = "small-co-api"
version = "0.1.0"
description = "The api for small but proud company"
authors = ["The Contractor"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
boto3 = "^1.18.43"
waitress = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
moto = {extras = ["server"], version = "^2.2.7"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
